readMe upgedated fuer Ausfuehren von Unit Tests + Protocol hinzugefuegt